apps/subsystems/media/tautulli/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: media
  labels:
    app.kubernetes.io/name: tautulli
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: tautulli
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tautulli
    spec:
      automountServiceAccountToken: false
      containers:
      - name: tautulli
        command:
        - /usr/local/bin/python
        - Tautulli.py
        args:
        - --config
        - /config/config.ini
        - --datadir
        - /config
        - --port
        - "8181"
        image: ghcr.io/tautulli/tautulli:v2.18.2@sha256:1b5875fe3193d450a62e7b438eb6701195c841f14f3dcb962e545eda42d3696f
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /status
            port: 8181
        ports:
        - name: tautulli
          containerPort: 8181
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /status
            port: 8181
        resources:
          requests:
            cpu: 15m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /config
          name: tautulli-data
        - mountPath: /config/logs
          name: tautulli-logs
        - mountPath: /tmp
          name: tautulli-temp
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      volumes:
      - name: tautulli-data
        persistentVolumeClaim:
          claimName: tautulli-data
      - name: tautulli-logs
        emptyDir: {}
      - name: tautulli-temp
        emptyDir: {}
