apps/subsystems/media/tautulli/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: media
  labels:
    app.kubernetes.io/name: tautulli
spec:
  selector:
    app.kubernetes.io/name: tautulli
  ports:
  - name: tautulli
    port: 8181
    targetPort: tautulli
    protocol: TCP
  type: ClusterIP
