apps/subsystems/media/tautulli/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: tautulli.${domain_name}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  # setting tls to [], so that default certficate will be assigned
  tls: []
  rules:
  - host: tautulli.${domain_name}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tautulli
            port:
              number: 8181
